# inventree-ipp-plugin

./: README.md  pyproject.toml
.github/workflows/: release.yml
inventree_ipp/: __init__.py  driver.py  ipp.py
tests/: test_ipp.py  test_ipp_transport.py
