[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "inventree-ipp-plugin"
version = "0.1.0"
description = "IPP label printer plugin for InvenTree"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.entry-points."inventree_plugins"]
inventree-ipp = "inventree_ipp:InvenTreeIppPlugin"
