[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-ipp-plugin"
version = "0.1.0"
description = "IPP label printer plugin for InvenTree"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.entry-points."inventree_plugins"]
inventree-ipp = "inventree_ipp:InvenTreeIppPlugin"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
